app/assets/stylesheets/styles.scss
@mixin ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

@mixin vertical-gradient($top, $bottom) {
  background: $top; /* Old browsers */
  background: -moz-linear-gradient(top, $top 0%, $bottom 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, $top 0%,$bottom 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, $top 0%,$bottom 100%); /* IE10+ */
  background: linear-gradient(to bottom, $top 0%,$bottom 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$top', endColorstr='$bottom',GradientType=0 ); /* IE6-9 */
}

* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
  z-index: inherit;
}

body {
  background-color: #2A2A2A;
  padding: 5px 0;
}

.container-fluid {
  min-width: 600px;
  max-width: 1024px;
  margin: auto;
}

@font-face {
  font-family: "Pincoya";
  src: font-url("pincoyablack.eot"); /* IE */
  src: local("Pincoya") font-url("pincoyablack.otf") format("opentype"); /* non-IE */
}

@font-face {
  font-family: "Impact";
  src: font-url("impact.eot"); /* IE */
  src: local("Pincoya") font-url("impact.ttf") format("truetype"); /* non-IE */
}

.header {
  height: 112px;
  width: 100%;
  overflow: hidden;
  position: relative;

  .name {
    text-align: center;
    line-height: 96px;
  }

  .logo {
    position: absolute;
    top: 0;
    background-color: #2A2A2A;
    padding-right: 4px;
  }
}


h1 {
  font-family: "Pincoya";
  color: white;
  font-size: 120px;
  background-color: #2A2A2A;
  padding: 5px 2px 0 5px;
  display: inline-block;
  white-space: nowrap;
  font-weight: normal;

  &::selection {
    background: transparent;
  }
}

.stripes {
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;

  .stripe {
    background-color: #787878;
    height: 27px;
    width: 100%;
    margin-bottom: 3px;
    &.middle {
      height: 28px;
    }
  }
}

.rooms {
  color: black;

  .room-row {
    margin-bottom: 24px;
  }

  .room {
    display: block;
    background-color: white;
    width: 150px;
    height: 140px;
    margin: auto;
    padding: 14px 3px 0 3px;
    text-align: center;
    color: black;
    font-size: 12px;

    &:hover {
      text-decoration: none;
    }

    &:hover {
      cursor: pointer;
    }

    .name {
      @include ellipsis;
    }

    .active-users {
      line-height: 10px;
    }
  }

  .room.new {
    background-color: #086e98;
    color: white;
    font-weight: bold;
    text-align: center;

    .thumbnail {
      background-color: #58a5c1;
    }

    .name {
      line-height: 35px;
    }
  }

  .thumbnail {
    margin: auto;
    width: 120px;
    height: 90px;
    margin-bottom: 1px;

    img {
      margin: auto;
      max-height: 90px;
      max-width: 120px;
    }
  }
}

.head {
  background-color: #595959;
  color: #CECECE;
  font-size: 24px;
  font-family: Impact, Charcoal, sans-serif;
  height: 27px;
  padding: 3px;
  margin-bottom: 1px;

  .volume {
    float: right;
  }
}

.body {
  background-color: white;
}

.now-playing {
  max-width: 720px;
  margin: auto;
  position: relative;
  margin-bottom: 20px;

  .name {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: 24px;
    color: #222222;
    margin-bottom: 5px;
    @include ellipsis;
  }

  .artist, .current-position {
    font-family: arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: 18px;
    color: #6b6b6b;
  }

  .current-position {
    position: absolute;
    right: 3px;
    bottom: 3px;
  }

  .body {
    padding: 3px;
  }
}

.songs-container {
  margin: auto;

  .song {
    padding: 3px;
    background-color: white;
    position: relative;

    &:nth-child(2n - 1) {
      background-color: #E6F2ED;
    }

    .name {
      font-family: arial, helvetica, sans-serif;
      font-weight: bold;
      font-size: 16px;
      color: #4E4E4E;
      @include ellipsis;
    }

    .artist, .duration {
      font-family: arial, helvetica, sans-serif;
      font-weight: bold;
      font-size: 14px;
      color: #999;
    }

    .duration {
      position: absolute;
      bottom: 3px;
      right: 3px;
    }

    .plus {
      cursor: pointer;
      width: 25px;
      float: left;
      height: 25px;
      font-size: 30px;
      font-weight: bold;
      color: black;
      line-height: 34px;
      margin-left: 3px;
    }
  }
}

.search {
  height: 45px;
  text-align: center;
  padding-top: 9px;

  .query {
    height: 26px;
    border: 1px solid #7f7f7f;

    &:focus {
      outline-color: black;
    };
  }

  .btn {
    @include vertical-gradient(#15975e, #34bf82);
    border: 1px solid #05804a;
    font-size: 14px;
    font-family: arial, helvetica, sans-serif;
    font-weight: bold;
    color: white;
    height: 26px;
    width: 73px;
  }
}

.room-queue .body {
  max-height: 460px;
  overflow-y: auto;
}

.add-songs .results {
  max-height: 415px;
  overflow-y: auto;
}

